@startuml
hide circle
skinparam linetype ortho

entity "users" as users {
  *id : BIGINT <<PK>>
  --
  username : VARCHAR <<UNIQUE>>
  password_hash : VARCHAR
  full_name : VARCHAR
  phone : VARCHAR
  legal_entity_name : VARCHAR
  role : VARCHAR
}

entity "store_addresses" as store_addresses {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  label : VARCHAR
  address_line : VARCHAR
  latitude : DECIMAL(10,7)
  longitude : DECIMAL(10,7)
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
}

entity "products" as products {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR
  category : VARCHAR
  description : VARCHAR
  photo_url : VARCHAR
  price : DECIMAL(10,2)
  stock_quantity : INT
  weight_kg : DOUBLE
  volume_m3 : DOUBLE
}

entity "orders" as orders {
  *id : BIGINT <<PK>>
  --
  customer_id : BIGINT <<FK>>
  delivery_address_id : BIGINT <<FK>>
  assigned_driver_id : BIGINT <<FK>>
  approved_by_manager_id : BIGINT <<FK>>
  assigned_by_logistician_id : BIGINT <<FK>>
  delivery_address_text : VARCHAR
  delivery_latitude : DECIMAL(10,7)
  delivery_longitude : DECIMAL(10,7)
  status : VARCHAR
  total_amount : DECIMAL(10,2)
  created_at : TIMESTAMP WITH TIME ZONE
  updated_at : TIMESTAMP WITH TIME ZONE
  approved_at : TIMESTAMP WITH TIME ZONE
  assigned_at : TIMESTAMP WITH TIME ZONE
  delivered_at : TIMESTAMP WITH TIME ZONE
  version : BIGINT
}

entity "order_items" as order_items {
  *id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  product_id : BIGINT <<FK>>
  quantity : INT
  price : DECIMAL(10,2)
  line_total : DECIMAL(10,2)
}

entity "order_timeline_events" as order_timeline_events {
  *id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  actor_user_id : BIGINT
  actor_username : VARCHAR
  actor_role : VARCHAR
  from_status : VARCHAR
  to_status : VARCHAR
  details : VARCHAR
  created_at : TIMESTAMP WITH TIME ZONE
}

entity "stock_movements" as stock_movements {
  *id : BIGINT <<PK>>
  --
  product_id : BIGINT <<FK>>
  order_id : BIGINT <<FK>>
  actor_user_id : BIGINT
  actor_username : VARCHAR
  actor_role : VARCHAR
  movement_type : VARCHAR
  quantity_change : INT
  reason : VARCHAR
  created_at : TIMESTAMP WITH TIME ZONE
}

entity "realtime_notifications" as realtime_notifications {
  *id : BIGINT <<PK>>
  --
  order_id : BIGINT
  title : VARCHAR
  message : VARCHAR
  event_type : VARCHAR
  order_status : VARCHAR
  target_roles : VARCHAR
  target_user_ids : VARCHAR
  created_at : TIMESTAMP WITH TIME ZONE
}

entity "audit_logs" as audit_logs {
  *id : BIGINT <<PK>>
  --
  actor_user_id : BIGINT
  actor_username : VARCHAR
  actor_role : VARCHAR
  action_type : VARCHAR
  entity_type : VARCHAR
  entity_id : VARCHAR
  details : VARCHAR
  created_at : TIMESTAMP WITH TIME ZONE
}

users ||--o{ store_addresses : owns
users ||--o{ orders : creates
users ||--o{ orders : assigned_driver
store_addresses ||--o{ orders : delivers_to
orders ||--o{ order_items : contains
products ||--o{ order_items : referenced_by
orders ||--o{ order_timeline_events : timeline
products ||--o{ stock_movements : movements
orders ||--o{ stock_movements : source
orders ||--o{ realtime_notifications : event_source
@enduml
